<?xml version="1.0"?>
<package>
  <name>factorymonitor</name>
  <version>1.0.0</version>
  <description>This is a factory monitor package"</description>
  <license>TODO</license>
  <maintainer email="ankitbhatia@gmail.com">Ankit Bhatia</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage />
  </export>
</package>
