<package>
  <name>factorymonitor</name>
  <version>1.0.0</version>
  <description>
    This package contains factory monitor software
  </description>
  <maintainer email="ankitbhatia@gmail.com">Ankit Bhatia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage />
  </export>
</package>
